{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 330,
  "lineage": "ecec1399-0382-dcc9-031f-73c09cff25ee",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341510224:vpc/vpc-092854421ecb68a89",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f2e21d612d8d358b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-062aeb532ab32e1da",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092854421ecb68a89",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0018fe4a963d30af3",
            "owner_id": "961341510224"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341510224:security-group/sg-0dfe0f1f84b4376f4",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfe0f1f84b4376f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab-ecs-sg",
            "name_prefix": "",
            "owner_id": "961341510224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-ecs-sg",
              "Owner": "YourName",
              "Project": "Lab3"
            },
            "tags_all": {
              "Name": "lab-ecs-sg",
              "Owner": "YourName",
              "Project": "Lab3"
            },
            "timeouts": null,
            "vpc_id": "vpc-092854421ecb68a89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341510224:security-group/sg-0a281372fa32615e7",
            "description": "Allow access to RDS from ECS tasks and local machine",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a281372fa32615e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "lab-rds-sg",
            "name_prefix": "",
            "owner_id": "961341510224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Owner": "YourName",
              "Project": "Lab3"
            },
            "tags_all": {
              "Owner": "YourName",
              "Project": "Lab3"
            },
            "timeouts": null,
            "vpc_id": "vpc-092854421ecb68a89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}